src/test/ui/associated-types/cache/project-fn-ret-contravariant.ok.stderr
error: fatal error triggered by #[dustc_error]
  --> $DIR/project-fn-ret-contravariant.rs:50:1
   |
LL | fn main() { }
   | ^^^^^^^^^

error: aborting due to previous error

